# lexpredict-lexnlp

./: .gitignore  .travis.yml  README.md  pyproject.toml  readthedocs.yml  setup.py
lexnlp/extract/common/: dates_classifier_model.py
lexnlp/extract/de/: date_model.pickle  dates.py
lexnlp/extract/en/: date_model.pickle  date_model.py  dates.py
lexnlp/extract/en/addresses/tests/: test_addresses.py
lexnlp/extract/en/tests/: test_definitions.py
lexnlp/extract/es/: regulations.py
lexnlp/nlp/en/segments/: pages.py  paragraphs.py  sections.py  sentences.py  titles.py
lexnlp/nlp/en/tests/: test_paragraphs.py  test_sections.py  test_stanford.py  test_stanford_missing.py  test_tokens.py
lexnlp/tests/: lexnlp_tests.py
lexnlp/utils/: iterating_helpers.py  unpickler.py
